--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,13 @@
                     <release>11</release>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>3.0.3</version>
+            </plugin>
         </plugins>
     </build>
-
     <dependencies>
         <dependency>
             <groupId>com.auth0</groupId>
